adding types to apply affiliation on to affiliations file